--- a/acompanhar.html
+++ b/acompanhar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acompanhe seu Reparo | TechAssist</title>
+    <title>Acompanhe seu Reparo | CentralOS</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -147,7 +147,7 @@
 
         <!-- Footer -->
         <div class="bg-gray-50 p-4 text-center border-t border-gray-100">
-            <p class="text-xs text-gray-400 font-medium">TechAssist &copy; 2024</p>
+            <p class="text-xs text-gray-400 font-medium">CentralOSt &copy; 2024</p>
         </div>
     </div>
 
