--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechAssist - Gestão Inteligente</title>
+    <title>CentralOS - Gestão Inteligente</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -75,8 +76,7 @@
         <nav x-show="session || employeeSession" class="bg-black text-white h-16 px-6 flex justify-between items-center shadow-md z-30" x-cloak>
             <div class="flex items-center space-x-6">
                 <div class="flex items-center space-x-2">
-                    <div class="bg-brand-500 w-8 h-8 rounded flex items-center justify-center text-white font-bold">TA</div>
-                    <span class="text-xl font-bold tracking-tight">TechAssist</span>
+                    <img src="logo.png" alt="CentralOS" class="h-12">
                 </div>
 
                 <div class="hidden md:flex flex-col border-l border-gray-700 pl-6">
@@ -690,7 +690,7 @@
                     <div class="min-h-screen flex items-center justify-center bg-gray-50 px-4">
                         <div class="max-w-md w-full bg-white p-8 rounded-2xl shadow-xl border border-gray-100">
                             <div class="text-center mb-8">
-                                <div class="bg-black text-white w-12 h-12 rounded-lg flex items-center justify-center text-xl font-bold mx-auto mb-4">TA</div>
+                                <img src="logologin.png" alt="TechAssist" class="h-[72px] mx-auto mb-4">
                                 <h2 class="text-2xl font-bold text-gray-900">Acesso ao Sistema</h2>
                             </div>
 
@@ -1044,81 +1044,9 @@
                                 </template>
                             </select>
                         </div>
-                        <div class="col-span-2" x-data="{ open: false, search: '' }">
+                         <div class="col-span-2">
                             <label class="block text-xs font-bold text-gray-500 mb-1">Defeito Relatado *</label>
-                            <div class="space-y-2">
-                                <div class="flex flex-wrap gap-2 rounded-lg border border-gray-200 bg-gray-50 p-2.5 min-h-[44px]">
-                                    <template x-for="defect in ticketForm.defects" :key="defect">
-                                        <span class="inline-flex items-center gap-2 rounded-full border border-gray-200 bg-white px-3 py-1 text-xs font-semibold text-gray-700">
-                                            <span x-text="defect"></span>
-                                            <button type="button" @click="removeDefectFromTicket(defect)" class="text-gray-400 hover:text-red-500 transition-colors">
-                                                <i class="fa-solid fa-xmark text-xs"></i>
-                                            </button>
-                                        </span>
-                                    </template>
-                                    <span x-show="ticketForm.defects.length === 0" class="text-xs text-gray-400">Selecione um ou mais defeitos...</span>
-                                </div>
-
-                                <div class="relative">
-                                    <button @click="open = !open; $nextTick(() => $refs.defectSearch.focus())"
-                                            type="button"
-                                            class="w-full bg-white border border-gray-300 rounded-lg p-2.5 text-left flex justify-between items-center focus:ring-2 focus:ring-brand-500 focus:border-brand-500">
-                                        <span :class="ticketForm.defects.length ? 'text-gray-900' : 'text-gray-400'">
-                                            <span x-show="ticketForm.defects.length === 0">Adicionar defeitos...</span>
-                                            <span x-show="ticketForm.defects.length > 0" x-text="`${ticketForm.defects.length} selecionado(s)`"></span>
-                                        </span>
-                                        <i class="fa-solid fa-chevron-down text-xs text-gray-500"></i>
-                                    </button>
-
-                                    <div x-show="open" @click.outside="open = false"
-                                         class="absolute z-10 mt-1 w-full bg-white shadow-lg max-h-60 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm"
-                                         x-transition:enter="transition ease-out duration-100"
-                                         x-transition:enter-start="transform opacity-0 scale-95"
-                                         x-transition:enter-end="transform opacity-100 scale-100"
-                                         x-transition:leave="transition ease-in duration-75"
-                                         x-transition:leave-start="transform opacity-100 scale-100"
-                                         x-transition:leave-end="transform opacity-0 scale-95"
-                                         x-cloak>
-
-                                        <div class="sticky top-0 z-10 bg-white p-2 border-b">
-                                            <div class="flex gap-1">
-                                                <input x-ref="defectSearch" x-model="search" type="text"
-                                                       class="w-full p-2 border rounded text-sm focus:ring-brand-500 focus:border-brand-500"
-                                                       placeholder="Buscar ou criar...">
-
-                                                <button x-show="search.length > 0 && !defectOptions.some(o => o.name.toLowerCase() === search.toLowerCase())"
-                                                        @click="createDefectOption(search).then(ok => { if(ok) { addDefectToTicket(search); search = ''; $nextTick(() => $refs.defectSearch.focus()); } })"
-                                                        class="bg-brand-500 text-white px-3 rounded hover:bg-brand-600 transition-colors" title="Cadastrar">
-                                                    <i class="fa-solid fa-plus"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-
-                                        <ul class="py-1">
-                                            <template x-for="defect in defectOptions.filter(o => o.name.toLowerCase().includes(search.toLowerCase()))" :key="defect.id">
-                                                <li class="cursor-pointer select-none relative py-2 pl-3 pr-9 hover:bg-gray-100 group flex justify-between items-center"
-                                                    @click="addDefectToTicket(defect.name)">
-                                                    <span class="block truncate"
-                                                          :class="ticketForm.defects.some(d => d.toLowerCase() === defect.name.toLowerCase()) ? 'font-bold text-brand-600' : 'text-gray-900'"
-                                                          x-text="defect.name"></span>
-
-                                                    <div class="flex items-center gap-2 pr-2">
-                                                        <i x-show="ticketForm.defects.some(d => d.toLowerCase() === defect.name.toLowerCase())" class="fa-solid fa-check text-xs text-brand-500"></i>
-                                                        <button @click.stop="deleteDefectOption(defect.id)" class="text-gray-300 hover:text-red-500 p-1 opacity-0 group-hover:opacity-100 transition-opacity">
-                                                            <i class="fa-solid fa-trash text-xs"></i>
-                                                        </button>
-                                                    </div>
-                                                </li>
-                                            </template>
-
-                                            <li x-show="defectOptions.filter(o => o.name.toLowerCase().includes(search.toLowerCase())).length === 0" class="text-gray-500 p-4 text-center italic text-xs">
-                                                <span x-show="search.length === 0">Comece a digitar...</span>
-                                                <span x-show="search.length > 0">Clique no + para criar.</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
+                            <textarea x-model="ticketForm.defect" rows="2" class="w-full border rounded-lg p-2.5 bg-gray-50"></textarea>
                         </div>
                     </div>
 
@@ -1493,14 +1421,7 @@
                                 </div>
 
                                 <p class="text-sm mb-1 font-bold text-gray-700">Defeito Inicial:</p>
-                                <div class="text-sm text-gray-600 bg-white p-2 rounded border mb-2">
-                                    <div class="flex flex-wrap gap-2" x-show="getDefectList(selectedTicket.defect_reported).length">
-                                        <template x-for="defect in getDefectList(selectedTicket.defect_reported)" :key="defect">
-                                            <span class="inline-flex items-center rounded-full border border-gray-200 bg-gray-50 px-3 py-1 text-xs font-semibold text-gray-700" x-text="defect"></span>
-                                        </template>
-                                    </div>
-                                    <p x-show="!getDefectList(selectedTicket.defect_reported).length" class="text-xs text-gray-400">Nenhum defeito informado.</p>
-                                </div>
+                                <p class="text-sm text-gray-600 bg-white p-2 rounded border mb-2" x-text="selectedTicket.defect_reported"></p>
 
                                 <template x-if="selectedTicket.test_notes && selectedTicket.test_notes.length > 0">
                                     <div>
